tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_record_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let f = | x =>
    let {a} = x
    a

  let result: String = {a: 2}.f()
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_record_1.kk:6:24
  │
6 │   let result: String = {a: 2}.f()
  │                        ^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
